adds french and german localization + localization switching + fixes color bug with 3 players + fixes double dice called before pawn movement finished

--- a/Config/Localization/Game_GenerateReports.ini
+++ b/Config/Localization/Game_GenerateReports.ini
@@ -5,6 +5,7 @@ ManifestName=Game.manifest
 ArchiveName=Game.archive
 CulturesToGenerate=en
 CulturesToGenerate=fr-FR
+CulturesToGenerate=de-DE
 
 [GatherTextStep0]
 CommandletClass=GenerateTextLocalizationReport
