--- a/Config/Localization/Game_ImportDialogue.ini
+++ b/Config/Localization/Game_ImportDialogue.ini
@@ -5,6 +5,7 @@ ArchiveName=Game.archive
 NativeCulture=en
 CulturesToGenerate=en
 CulturesToGenerate=fr-FR
+CulturesToGenerate=de-DE
 
 [GatherTextStep0]
 CommandletClass=ImportLocalizedDialogue
