--- a/Config/Localization/Game_Compile.ini
+++ b/Config/Localization/Game_Compile.ini
@@ -10,6 +10,7 @@ bValidateSafeWhitespace=false
 NativeCulture=en
 CulturesToGenerate=en
 CulturesToGenerate=fr-FR
+CulturesToGenerate=de-DE
 
 [GatherTextStep0]
 CommandletClass=GenerateTextLocalizationResource
