--- a/Config/Localization/Game_Export.ini
+++ b/Config/Localization/Game_Export.ini
@@ -4,6 +4,7 @@ DestinationPath=Content/Localization/Game
 NativeCulture=en
 CulturesToGenerate=en
 CulturesToGenerate=fr-FR
+CulturesToGenerate=de-DE
 ManifestName=Game.manifest
 ArchiveName=Game.archive
 PortableObjectName=Game.po
