--- a/Config/Localization/Game_Gather.ini
+++ b/Config/Localization/Game_Gather.ini
@@ -8,6 +8,7 @@ ArchiveName=Game.archive
 NativeCulture=en
 CulturesToGenerate=en
 CulturesToGenerate=fr-FR
+CulturesToGenerate=de-DE
 
 [GatherTextStep0]
 CommandletClass=GatherTextFromAssets
